cpp/test/Slice/errorDetection/IllegalIdentifier.err
IllegalIdentifier.ice:17: Identifier cannot be scoped: `scoped::name'
IllegalIdentifier.ice:20: illegal input character: '\305'
IllegalIdentifier.ice:20: syntax error
IllegalIdentifier.ice:20: illegal input character: '\222'
IllegalIdentifier.ice:22: illegal input character: '\305'
IllegalIdentifier.ice:22: illegal input character: '\223'
IllegalIdentifier.ice:24: syntax error
IllegalIdentifier.ice:29: illegal input character: '\357'
IllegalIdentifier.ice:29: illegal input character: '\273'
IllegalIdentifier.ice:29: illegal input character: '\277'
